@@ -135,9 +135,7 @@ class EditSource(EditPrimary):
         self.backref_tab = self._add_tab(
             notebook,
             SourceBackRefList(self.dbstate, self.uistate, self.track,
-                              self.db.find_backlink_handles(self.obj.handle),
-                              self.enable_warnbox
-                              ))
+                              self.db.find_backlink_handles(self.obj.handle)))
         
         notebook.show_all()
         self.glade.get_widget('vbox').pack_start(notebook,True)
